; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_ioctl.c_zpl_earlier_version.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_ioctl.c_zpl_earlier_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@B_TRUE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@DMU_OST_ZFS = common dso_local global i64 0, align 8
@ZFS_PROP_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @zpl_earlier_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zpl_earlier_version(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* @B_TRUE, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = load i32, i32* @FTAG, align 4
  %12 = call i64 @dmu_objset_hold(i8* %10, i32 %11, i32** %6)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %38

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = call i64 @dmu_objset_type(i32* %15)
  %17 = load i64, i64* @DMU_OST_ZFS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %14
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* @FTAG, align 4
  %22 = call i32 @dmu_objset_rele(i32* %20, i32 %21)
  %23 = load i32, i32* @B_TRUE, align 4
  store i32 %23, i32* %3, align 4
  br label %40

24:                                               ; preds = %14
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* @ZFS_PROP_VERSION, align 4
  %27 = call i64 @zfs_get_zplprop(i32* %25, i32 %26, i32* %8)
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %5, align 4
  %32 = icmp slt i32 %30, %31
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %29, %24
  %35 = load i32*, i32** %6, align 8
  %36 = load i32, i32* @FTAG, align 4
  %37 = call i32 @dmu_objset_rele(i32* %35, i32 %36)
  br label %38

38:                                               ; preds = %34, %2
  %39 = load i32, i32* %7, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %38, %19
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @dmu_objset_hold(i8*, i32, i32**) #1

declare dso_local i64 @dmu_objset_type(i32*) #1

declare dso_local i32 @dmu_objset_rele(i32*, i32) #1

declare dso_local i64 @zfs_get_zplprop(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
